ISPN-14784 Java 21
* Rework virtual threads to work with JDK 21 and make it optional
* Use Java 21 to build on CI
* Remove the --enable-preview flags
* Include Maven Wrapper scripts
* Require Maven 3.9.0 to build
* Run mvn with -Djava.security.manager=allow to workaround Ant issue
* Remove build.sh and build.bat scripts